# Hexagonal

./: CHANGELOG.md  Hexagonal.cabal  README.md
app/: Main.hs
src/: Hexagonal.hs
