cabal-version:       2.4
name:                Hexagonal
version:             0.0.0.0
synopsis:            Utilites for data sampled on regular hexagonal grids.
description:         Utilites for data sampled on regular hexagonal grids.
homepage:            https://github.com/timput/Hexagonal
bug-reports:         https://github.com/timput/Hexagonal/issues
license:             GPL-3.0-only
license-file:        LICENSE
author:              tim put
maintainer:          tim put <timput@gmail.com>
copyright:           2020 tim put
category:            Data
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
tested-with:         GHC == 8.8.3

source-repository head
  type:                git
  location:            https://github.com/timput/Hexagonal.git

common common-options
  build-depends:       base >= 4.13.0.0
                     , linear

  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
  if impl(ghc >= 8.0)
    ghc-options:       -Wredundant-constraints
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.8)
    ghc-options:       -Wmissing-deriving-strategies

  default-language:    Haskell2010

library
  import:              common-options
  hs-source-dirs:      src
  exposed-modules:     Hexagonal
